<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_users_table"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_users_table" />

        <item
            android:id="@+id/nav_add_word"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/nav_add_word" />

        <item
            android:id="@+id/nav_manage_words"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_manage_words" />

        <item
            android:id="@+id/nav_profile_picture"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/nav_profile_picture" />

        <item
            android:id="@+id/nav_change_details"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_change_details" />
    </group>
</menu>